fixed cards overflow

--- a/Client/src/components/cards/cards.module.scss
+++ b/Client/src/components/cards/cards.module.scss
@@ -4,9 +4,10 @@
     align-items: center;
     margin-top: 2%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
-    gap: 16px;
+    gap: 3%;
     max-width: 90vw;
     margin-left: 5%;
+    margin-bottom: 10%;
 }
 .pagination {
     margin-top: 5%; 
